--- a/index.html
+++ b/index.html
@@ -120,9 +120,29 @@
 
   <div class="media-container" id="media"></div>
   <div class="hint-container" id="hints"></div>
-  <div class="answer" id="answer" onclick="reveal(this)"></div>
+  <div class="answer" id="answer" onclick="checkAnswer(this)"></div>
 
   <script>
+
+  let answerText = "";
+  let answerBox;
+
+  function checkAnswer(element) {
+      const correctAnswer = answerText;  
+      const userInput = prompt("Digite sua resposta:");
+
+      if (userInput.toLowerCase() === correctAnswer.toLowerCase()) {
+        reveal(answerBox);
+        const correctAudio = new Audio('certa resposta.mp3');
+        correctAudio.play();  // Play correct answer sound
+        alert("Acertô mizeravi!");  // Display correct message
+      } else {
+        element.classList.add('revealed');
+        const errorAudio = new Audio('errooo.mp3');
+        errorAudio.play();  // Play error sound
+        alert("Errooooooooo");  // Display incorrect message
+      }
+    }
     function reveal(element) {
       if (element.classList.contains('hint-box') || element.classList.contains('answer-box')) {
         const hintText = element.getAttribute('data-hint'); // Get the hint text from the data attribute
@@ -184,7 +204,7 @@
 
         const generalHints = lines.slice(0, -2);
         const definitionHint = lines[lines.length - 2];
-        const answerText = lines[lines.length - 1];
+        answerText = lines[lines.length - 1];
 
         // Add general hints with boxes
         generalHints.forEach((line, index) => {
@@ -231,11 +251,10 @@
         answerLabel.className = "hint-label";
         answerLabel.textContent = "Resposta: ";
 
-        const answerBox = document.createElement("span");
+        answerBox = document.createElement("span");
         answerBox.className = "answer-box";
         answerBox.setAttribute('data-hint', answerText);  // Store the answer text
         answerBox.textContent = "";  // Start with empty box
-        answerBox.onclick = () => reveal(answerBox);
 
         answerDiv.appendChild(answerLabel);
         answerDiv.appendChild(answerBox);
