--- a/index.html
+++ b/index.html
@@ -273,8 +273,8 @@
 <script>
   // Drawing on canvas
   const canvas = document.createElement("canvas");
-  canvas.width = window.innerWidth * 2;
-  canvas.height = window.innerHeight * 2;
+  canvas.width = window.innerWidth;
+  canvas.height = window.innerHeight * 1.2;
   canvas.style.position = "absolute";
   canvas.style.top = "0";
   canvas.style.left = "0";
