get back down here button

--- a/index.html
+++ b/index.html
@@ -360,9 +360,8 @@ function desistir() {
 <button id="desistoBtn" onclick="desistir()" style="
   position: absolute;
   z-index: 10;
-  top: 20px;
-  left: 20px;
   padding: 10px 20px;
+  margin-top: 20px;
   font-size: 1rem;
 ">
 
