--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@ function desistir() {
 </script>
 
 <button id="desistoBtn" onclick="desistir()" style="
-  position: absolute;
+  position: relative;
   z-index: 10;
   padding: 10px 20px;
   margin-top: 20px;
