Changing query param from q to level

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@ function desistir() {
   }
 }
 
-    const key = getQueryParam("q");
+    const key = getQueryParam("level");
     const basePath = `enigmas/${key}`;
 
     const mediaContainer = document.getElementById("media");
