--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@ function desistir() {
           btn.style.display = 'block';
           btn.style.margin = '2px';
           btn.onclick = () => {
-            window.location.href = `?q=${level}`;
+            window.location.href = `?level=${level}`;
           };
           dropdown.appendChild(btn);
         });
